<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">漫猫SD敢达</string>
    <string name="app_versionName">0.1a</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string-array name="top_view_titles">
        <item>精选</item>
        <item>视频</item>
        <item>新闻</item>
        <item>机体</item>
    </string-array>
    <string-array name="top_view_icons">
        <item>@drawable/ic_featuring</item>
        <item>@drawable/ic_video</item>
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_units_g</item>
    </string-array>

    <string name="latest_units_caption">最新机体</string>
    <string name="latest_news_caption">最新情报</string>
    <string name="date_today">今天</string>
    <string name="date_yesterday">昨天</string>
    <string name="date_days_before">天前</string>
    <string name="menu_item_refresh">刷新</string>
    <string name="network_failure">网络不给力啊\n要不过一会再试试看?</string>
    <string name="reload">重新加载</string>
    <string name="data_loading_failure">数据加载失败</string>
    <string name="network_disconnected">网络似乎已经断开.</string>
    <string name="title_activity_video_view">视频</string>
    <string name="title_activity_post_view">情报</string>
    <string name="show_all">显示全部</string>
    <string name="no_more_data">没有更多了…</string>
    <string name="video_host_2">17173游戏视频</string>
    <string name="video_host_4">优酷视频</string>
    <string name="loading_video_text">视频加载中…</string>
    <string name="video_hosted_by">来自: </string>
    <string name="network_error_check_try_again">网络似乎出现问题, 请检查网络后重试.</string>
    <string name="button_text_OK">好</string>
    <string name="unsupported_video_host">此视频不支持手机播放</string>
    <string name="watch_this_video_on_pc">请用电脑访问漫猫网站来观看此视频.</string>
    <string name="title_activity_unit_view">机体</string>
    <string name="hello_world">Hello world!</string>
    <string name="unit_stat_attack">攻击</string>
    <string name="unit_stat_defense">防守</string>
    <string name="unit_stat_mobility">机动</string>
    <string name="unit_stat_control">操控</string>
    <string name="unit_stat_sum_3d">能力(3D)总和</string>
    <string name="unit_stat_sum_4d">4D总和</string>

    <string-array name="unit_view_tab_titles">
        <item>武器</item>
        <item>技能</item>
        <item>资料</item>
        <item>视频</item>
    </string-array>

    <string name="unit_view_tab_title_weapons">武器</string>
    <string name="unit_view_tab_title_skills">技能</string>
    <string name="unit_view_tab_title_details">资料</string>
    <string name="unit_related_video">视频</string>
    <string name="unit_4p_modification">变形</string>
    <string name="unit_4p_oversize">大型</string>
    <string name="unit_4p_repair">修理</string>
    <string name="unit_4p_sniping">狙击</string>
    <string name="unit_group_caption">势力</string>
    <string name="unit_detail_getway">获取方式</string>
    <string name="unit_getway_capsule">扭蛋机</string>
    <string name="unit_getway_shop_buy">购买或租赁</string>
    <string name="unit_getway_shop_buy_mix">购买合成图</string>
    <string name="unit_getway_quest">Quest</string>
    <string name="unit_getway_mission">Mission</string>
    <string name="unit_getway_lab">研究所</string>
    <string name="unit_getway_etc">特别</string>
    <string name="unit_detail_story">介绍</string>
    <string name="view_unit_mix_info">查看</string>
    <string name="view_unit_mix_info_cn">查看国服</string>
    <string name="action_search_unit">搜索机体</string>
    <string name="title_activity_search_unit">搜索机体</string>
    <string name="search_unit_hint">昵称或机体名</string>
    <string name="title_activity_origin_list">全部作品</string>
    <string name="title_activity_units_by_origin">UnitsByOriginActivity</string>
    <string name="press_back_again_to_exit">再按一次返回键退出…</string>
    <string name="action_benefit">福利</string>


    <string name="domob_publisher_id">96ZJ3KZgzeYqLwTCqk</string>
    <string name="youmi_app_id">dd9220c0bf404ef0</string>
    <string name="youmi_app_secret">0edc8891c11d2f1a</string>
</resources>
