<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gd="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <!-- 名称 和 rank -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >

        <cn.sdgundam.comicatsdgo.view.ScrollingTextView
            android:id="@+id/model_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/rank_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#3F6FAD"
            android:textStyle="bold"
            android:fontFamily="serif"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#3F6FAD"
            android:textStyle="bold"
            android:text=" rank"
            />
    </LinearLayout>

    <!-- 图 和 条状图 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/unit_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".42"
            android:layout_marginRight="11dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".58">

            <!-- gauge bars and simple stats -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/unit_stat_attack" />

                <cn.sdgundam.comicatsdgo.view.GaugeBarView
                    android:id="@+id/gauge_attack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    gd:gaugeType="Attack" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/unit_stat_defense" />

                <cn.sdgundam.comicatsdgo.view.GaugeBarView
                    android:id="@+id/gauge_defense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    gd:gaugeType="Defense" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/unit_stat_mobility" />

                <cn.sdgundam.comicatsdgo.view.GaugeBarView
                    android:id="@+id/gauge_mobility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    gd:gaugeType="Mobility" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/unit_stat_control" />

                <cn.sdgundam.comicatsdgo.view.GaugeBarView
                    android:id="@+id/gauge_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    gd:gaugeType="Control" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/unit_stat_sum_3d"
                    android:textColor="#F00" />

                <TextView
                    android:id="@+id/sum_3d_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="20dp"
                    android:textColor="#F00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/unit_stat_sum_4d"
                     />

                <TextView
                    android:id="@+id/sum_4d_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="20dp"
                    />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
